--- a/baitap1.html
+++ b/baitap1.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mai Thanh Hải</title>
+<style>
+    select { width: 200px;
+    }
+    p{color:blue;}
+    form{ background:antiquewhite;
+    width:400px;
+    font-family: "Times New Roman"
+    }
+</style>
 </head>
 <body>
+<form method ="get" action="baitap1.html">
+<h1> Order Form </h1>
+   <p> what would you like to buy? </p>
+    <select>
+        <option value="car">car</option>
+        <option value="plant">plant</option>
+        <option value="bike">bike</option>
+        <option value="D">D</option>
+    </select>
+<p>How many would you like to order?</p>
+       <input type="radio" name="gender" value="1-$10" > 1-$10 <br>
+       <input type="radio" name="gender" value="2-$20" > 2-$20 <br>
+       <input type="radio" name="gender" value="3-$10" > 3-$10 <br>
+<p>Name:</p><br>
+<input type="text" name="FirstName" placehoder = "First name" size="15"/>
+    <input type="text" name="Last name" placehoder = "First name" size="15"/><br>
+   <p>Email:</p>
+    <input type="text" name="Email" size="20"/>
+    <p>Phone Number:</p><br>
+    <input type="text" name="Phone Number" size="10"/>-
+    <input type="text" name="Phone Number" size="10"/>-
+    <input type="text" name="Phone Number" size="10"/> <br>
+   <p><input type ="button" name="btsubmit" value="Submit"/><br></p>
 
+  </form>
 </body>
 </html>
